got the fitted interval graph for predictions back in and cleaned up just a bit of the stuff we talked about on the call

--- a/06_SSN_Model_Predict.Rmd
+++ b/06_SSN_Model_Predict.Rmd
@@ -1096,14 +1096,12 @@ ggplot(DFobs3a, aes(x = dist_nearest_up_wb_km, y = vsci)) + geom_point() + geom_
 # this effectively creates a giant spread so that there's almost 0 observed effect for the change of dist_nearest_up_wb_km when wbc is absent
 jitter_obs = ssn_get_data(j_ssn3)
 jitter_obs$dist_nearest_up_wb_km[jitter_obs$wbc == "absent"] =  runif(nrow(jitter_obs[jitter_obs$wbc == "absent",]), -100000000000, 100000000000)
-
 # put back into an ssn object
 jit_ssn = SSN2::ssn_put_data(jitter_obs,j_ssn3)
-# flip order of levels so we get present as an effect
-levels(jitter_obs$wbc) = c("absent","present")
+
 
 a5ssn_wswq_ml1 <- ssn_lm(
-  formula = vsci ~ pct_imp_w_emplog + elev_ws + do + vahusb_JL + wbc+  wbc:dist_nearest_up_wb_km - dist_nearest_up_wb_km,
+  formula = vsci ~ pct_imp_w_emplog + elev_ws + do + vahusb_JL + wbc + wbc:dist_nearest_up_wb_km,
   ssn.object = jit_ssn,
   tailup_type = "none",
   taildown_type = "exponential",
@@ -1121,6 +1119,106 @@ loocv(a5ssn_wswq_ml1)
 glances(z4ssn_wswq_ml1,a5ssn_wswq_ml1)
 
 plot(a5ssn_wswq_ml1, which = c(1:6))
+
+
+## alternate option for just numerical (This matches roughly what they did in the paper you sent)
+num_obs = ssn_get_data(j_ssn3)
+str(num_obs$wbc)
+num_obs$wbc = as.character(num_obs$wbc)
+num_obs$wbc[num_obs$wbc == "absent"] = 0
+num_obs$wbc[num_obs$wbc == "present"] = 1
+num_obs$wbc = as.numeric(num_obs$wbc)
+num_ssn = SSN2::ssn_put_data(num_obs,j_ssn3)
+
+mod_num <- ssn_lm(
+  formula = vsci ~ pct_imp_w_emplog + elev_ws + do + vahusb_JL + wbc + wbc:dist_nearest_up_wb_km,
+  ssn.object = num_ssn,
+  tailup_type = "none",
+  taildown_type = "exponential",
+  euclid_type = "exponential",
+  nugget_type = "nugget",
+  estmethod = "ml",
+  additive = "afv_area",
+  partition_factor = ~ju
+)
+
+summary(mod_num)
+
+
+
+#### mike's model questions
+
+####### through to the end of this chunk is just the models we talked about on the call
+# wbc only
+mod1 <- ssn_lm(
+formula = vsci ~ pct_imp_w_emplog + elev_ws + do + vahusb_JL + rck_dep_ws + wwtp + wbc,
+ssn.object = j_ssn3,
+tailup_type = "none",
+taildown_type = "exponential",
+euclid_type = "exponential",
+nugget_type = "nugget",
+estmethod = "ml",
+additive = "afv_area",
+partition_factor = ~ju
+)
+# DistNearestUpWb_km only
+
+mod2 <- ssn_lm(
+formula = vsci ~ pct_imp_w_emplog + elev_ws + do + vahusb_JL + rck_dep_ws + wwtp + dist_nearest_up_wb_km,
+ssn.object = j_ssn3,
+tailup_type = "none",
+taildown_type = "exponential",
+euclid_type = "exponential",
+nugget_type = "nugget",
+estmethod = "ml",
+additive = "afv_area",
+partition_factor = ~ju
+)
+# wbc and DistNearestUpWb_km
+
+mod3 <- ssn_lm(
+formula = vsci ~ pct_imp_w_emplog + elev_ws + do + vahusb_JL + rck_dep_ws + wwtp + wbc + dist_nearest_up_wb_km,
+ssn.object = num_ssn,
+tailup_type = "none",
+taildown_type = "exponential",
+euclid_type = "exponential",
+nugget_type = "nugget",
+estmethod = "ml",
+additive = "afv_area",
+partition_factor = ~ju
+)
+
+mod3v2 <- ssn_lm(
+formula = vsci ~ pct_imp_w_emplog + elev_ws + do + vahusb_JL + rck_dep_ws + wwtp + wbc + dist_nearest_up_wb_km,
+ssn.object = j_ssn3,
+tailup_type = "none",
+taildown_type = "exponential",
+euclid_type = "exponential",
+nugget_type = "nugget",
+estmethod = "ml",
+additive = "afv_area",
+partition_factor = ~ju
+)
+
+mod4 = ssn_lm(
+formula = vsci ~ pct_imp_w_emplog + elev_ws + do + vahusb_JL + rck_dep_ws + wwtp +wbc+ wbc:dist_nearest_up_wb_km,
+ssn.object = num_ssn,
+tailup_type = "none",
+taildown_type = "exponential",
+euclid_type = "exponential",
+nugget_type = "nugget",
+estmethod = "ml",
+additive = "afv_area",
+partition_factor = ~ju
+)
+
+
+summary(mod1)
+summary(mod2)
+summary(mod3)
+summary(mod3v2)
+summary(mod4)
+glances(mod1, mod2, mod3,mod4)
 
 
 ```
@@ -1220,6 +1318,54 @@ mapview(a5predict1ws_vsci)
 # st_write(a4preds_cov_19_22, dsn = file.path(getwd(), "preds_cov_19_22.gpkg"), layer = "preds_cov_1922", driver = "GPKG", quiet = FALSE)
 
 ```
+
+## TLH preds fitted interval
+
+```{r fitted_interval_preds}
+
+a5predict1ws_vsci
+
+
+# get spatial residuals from model
+spatResids_preds<-residuals(a5ssn_wswq_reml1, cross.validation=T)
+
+# pull sd of residuals and fitted values
+resid_SD = sd(spatResids_preds)
+fitted_vals = a5predict1ws_vsci$.fitted
+
+# combine to a dataframe
+spat<-cbind(fitted_vals,resid_SD^2)
+
+# spatial prediction percentiles
+(spat.Pred.pct<-t(apply(spat,1,function(x) qnorm(c(Q05=0.05,Q10=0.1,Q25=0.25,Median=0.5,Q75=0.75,Q90=0.9,Q95=0.95),x[1],sqrt(x[2])))))
+
+spat.Pred.median = spat.Pred.pct[,4]
+
+# make sure I've got the right obj
+DFpreds<-ssn_get_data(j_ssn3,name = "Preds_2019_2022")
+# observed and median of our prediction intervals
+ty<-DFpreds$vsci
+tx<-spat.Pred.median
+
+#percentiles
+ox<-order(tx)
+op05<-spat.Pred.pct[ox,"Q05"]
+op95 <- spat.Pred.pct[ox,"Q95"]
+
+# plot
+plot(tx,ty,xlim=range(na.omit(tx)),ylim=range(na.omit(ty),na.omit(op95)),xlab="VSCI Value",ylab="VSCI Observed Value",main="Spatial Model Observed vs. Predicted")
+abline(0,1,col="red")
+lines(lowess(na.omit(tx),na.omit(ty)),col='blue')
+
+# 5th percentile of predictive distribution
+lines(tx[ox],op05,lty=2,col='black')
+# 95th percentile of predictive distribution
+lines(tx[ox],op95,lty=2,col='black')
+#legend
+legend("topleft",lty=c(1,1,2,2),col=c("red","blue","black","black"),legend=c("y = x","lowess","5% Pred","95% Pred"), x.intersp = 0.7, y.intersp = 0.7)
+
+```
+
 
 
 # Compare SSN Models with ML
